Update toggle descriptions to use "Allow" logic so that On means Active. (they seemed confusing without this)

--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -525,13 +525,13 @@
   "Setting_privacy-soft-landing_Name": "Soft Landing Experiences",
   "Setting_privacy-soft-landing_Description": "Displays tips and notifications about Windows features as you use the operating system",
   "Setting_privacy-oem-preinstalled-apps_Name": "OEM Pre-installed Apps",
-  "Setting_privacy-oem-preinstalled-apps_Description": "Prevents OEM manufacturers from automatically installing bloatware apps",
+  "Setting_privacy-oem-preinstalled-apps_Description": "Permits the device manufacturer to automatically install bloatware apps and services.",
   "Setting_privacy-preinstalled-apps_Name": "Pre-installed Suggested Apps",
-  "Setting_privacy-preinstalled-apps_Description": "Prevents Microsoft from automatically installing suggested apps",
+  "Setting_privacy-preinstalled-apps_Description": "Permits the installation of recommended Microsoft apps and services.",
   "Setting_privacy-preinstalled-apps-ever_Name": "Pre-installed Apps History Tracking",
-  "Setting_privacy-preinstalled-apps-ever_Description": "Disables tracking of whether pre-installed apps were ever enabled",
+  "Setting_privacy-preinstalled-apps-ever_Description": "Tracks the activation history and usage status of pre-installed applications.",
   "Setting_privacy-silent-installed-apps_Name": "Silent App Installation",
-  "Setting_privacy-silent-installed-apps_Description": "Prevents apps from being silently installed in the background",
+  "Setting_privacy-silent-installed-apps_Description": "Enables applications to be provisioned and installed in the background without user consent.",
   "Setting_privacy-lock-screen_Name": "Lock Screen",
   "Setting_privacy-lock-screen_Description": "Allows users to lock their computer using Windows+L, Start menu, or Ctrl+Alt+Del screen",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight on Lock Screen",
